--- a/prisma.config
+++ b/prisma.config
@@ -3,8 +3,8 @@ port: 4466
 databases:
   default:
     connector: postgres
-    host: postgres
+    host: cs-postgres
     port: 5432
     user: postgres
-    password:
+    password: tea
     connectionLimit: 20
