--- a/prisma.config
+++ b/prisma.config
@@ -6,5 +6,5 @@ databases:
     host: cs-postgres
     port: 5432
     user: postgres
-    password: tea
+    password: creators_gate_psql_00
     connectionLimit: 20
